# BHJet

./: .gitignore  AGNplot.py  AGNplot2.py  LICENSE  MakeAgnjet  MakeBHJet  NotesOnSlirping  Plot.py  Plot2.py  README  README.md  agnjet.cc  agnjet.hh  agnjet.sl  agnjet_glue.cc  agnjet_merged.cc  agnjet_merged.hh  agnjet_merged_glue.cc  bb.cc  bhjet.cpp  bhjet.hh  bhjet.sl  bhwrap.cpp  compton.cc  dynamics.cc  electrons.cc  equipartition.cc  jetpars.cpp  jetwrap.cc  max_ene.cc  mj_aven.cc  norm_ele.cc  pairs.cc  plots.cc  slirpAgnjet  spectral_compnts.cc  synchrotron.cc  thermal.cc  utilities.cc  utils.cpp  (+1 more)
BHJet/: .gitignore  DemoPyjetMain.py  EBL.cpp  MakeBHJet  Plot_joined.py  Plot_separate.py  README.md  bhjet.cpp  bhjet.hh  bhjet.sl  bhwrap.cpp  jetpars.cpp  lmodel_bhjet  pyjetmain  pyjetmain.cpp  slirpAgnjet  utils.cpp  wrap_xspec.cpp
BHJet/sherpa/: .gitignore  pyproject.toml  setup.cfg  setup.py
BHJet/sherpa/src/bhjet/: __init__.py  _models.cxx  ui.py
Examples/: .gitignore  Coronae.py  MakeCode  Particles.py  README.md  Singlezone.py  corona_examples.x  kariba_corona_examples.cpp  kariba_examples.hh  kariba_particles_examples.cpp  kariba_singlezone_examples.cpp  particles_examples.x  utils.cpp
Kariba/: BBody.cpp  Bknpower.cpp  Bknpower.hpp  Cyclosyn.cpp  Cyclosyn.hpp  Kappa.cpp  Mixed.cpp  Mixed.hpp  Particles.hpp  Powerlaw.cpp  Powerlaw.hpp  README.md  ShSDisk.cpp  ShSDisk.hpp  Thermal.cpp
lib/: BBody.cpp  BBody.hpp  Bknpower.cpp  Bknpower.hpp  Compton.cpp  Compton.hpp  Cyclosyn.cpp  Cyclosyn.hpp  Kappa.cpp  Kappa.hpp  Mixed.cpp  Mixed.hpp  Particles.cpp  (+11 more)
(+7 files in other folders)
