[metadata]
name = bhjet
author = Matteo Lucchini
version = 0.1
description = Use the BHJet model from Lucchini et al. 2021, arxiv: 2108.12011
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
    Development Status :: 3 - Alpha

[options]
zip_safe = False

packages = find:
package_dir =
    =src

[options.packages.find]
where = src
